--- a/source/404.html
+++ b/source/404.html
@@ -22,6 +22,6 @@ color: #08a8e6;
 <body>
 <p>404 Not Found<br>
 此页面暂无内容</p>
-<p><a href="http:xinyuefei.com">去网站首页 »</a></p>
+<p><a href="http://xinyuefei.com">去网站首页 »</a></p>
 </body>
 </html>
