--- a/source/404.html
+++ b/source/404.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 <style>
 body {
-padding: 100px;
+padding: 100px 0;
 background-color: #f2f6ed;
 line-height: 1.667em;
 text-align: center;
